# donation-for-shifa

./: .gitignore  API.md  README.md  env.example  main.py  manage.py  pyproject.toml  requirements.txt
apps/application/: __init__.py  models.py  routes.py  schemas.py  services.py  tasks.py  views.py
apps/distribution/: __init__.py  models.py  routes.py  schemas.py  services.py  tasks.py  views.py
apps/donation/: __init__.py  models.py  routes.py  schemas.py  services.py  tasks.py  views.py
apps/stats/: __init__.py  models.py  routes.py  schemas.py  services.py  tasks.py  views.py
apps/user/: models.py  routes.py  schemas.py  views.py
apps/user/migrations/: README.md  __init__.py
config/: celery.py  exceptions.py  middleware.py  renderer.py  settings.py
core/: __init__.py  auth.py  cache.py  dependencies.py  serializers.py
migrations/application/: 0_20260313235742_init.py
migrations/distribution/: 0_20260313233722_init.py
migrations/donation/: 0_20260313232450_init.py
migrations/user/: 0_20260313231507_init.py  3_20260130232014_None.py
utils/: current_user.py  jwt.py  rate_limiter.py  response_wrapper.py  security.py
